spacing bug resolved

--- a/resources/css/writing-samples.css
+++ b/resources/css/writing-samples.css
@@ -55,7 +55,6 @@ html,body {
 
   
   h2 {
-    padding-bottom: 5px;
     padding-top: 4vh;
     font-size: 2rem;
   }
@@ -77,7 +76,9 @@ html,body {
   .header {
     background-image: url(../../resources/media/newsletter.jpg);
     background-size: 100%;
-    /*background-color: rgb(187, 218, 179);*/
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     margin-bottom: 2vw;
     height: 40vh;
     box-shadow: inset 0 0 0 2000px rgba(187, 218, 179, .8);
@@ -91,23 +92,15 @@ html,body {
   }
 
   .container {
-    padding: 30px;
+    padding: 0px 40px;
   }
 
   .writing-sample {
     background-color:rgb(245, 245, 245);
     padding: 3% 3% 3% 3%;
     margin: 1% 8% 5% 5%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    justify-self: center;
-    gap: 4em;
   }
 
-  .child {
-    width: 400px;
-  }
 
   .writing-sample p {
     font-family: Georgia, 'Times New Roman', Times, serif;
